--- a/style.css
+++ b/style.css
@@ -3,3 +3,32 @@ body {
   height: 100%;
   margin: 0;
 }
+
+h1 {
+  text-align: center;
+}
+
+nav a {
+  padding-left: 10px;
+  padding-right: 10px;
+  background-color: lavender;
+}
+
+nav {
+  text-align: center;
+}
+
+figure {
+  text-align: center;
+}
+
+figcaption {
+  text-align: center;
+    font-size: 15px;}
+
+p {
+  margin-left: auto;
+  margin-right: auto;
+  text-align: center;
+  width: 800px
+}
